--- a/test-report.html
+++ b/test-report.html
@@ -1,8 +1,34 @@
-<html><head><meta charset="utf-8"/><title>Test report</title><style type="text/css">html, body {font-family: Arial, Helvetica, sans-serif;font-size: 1rem;margin: 0;padding: 0;color: #333;}
-body {padding: 1rem;font-size: 0.85rem;}
-#title {margin-top: 0;}
-#timestamp {font-weight: bold;color: #666;margin-bottom: 0.5rem;}
-#summary {color: #999;margin-bottom: 1rem;}
+<html><head><meta charset="utf-8"/><title>Test report</title><style type="text/css">html, body {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 1rem;
+	margin: 0;
+	padding: 0;
+	color: #333;
+}
+body {
+	padding: 1rem;
+	font-size: 0.85rem;
+}
+header {
+	display: flex;
+	align-items: center;
+}
+#title {
+	margin: 0;
+	flex-grow: 1;
+}
+#logo {
+	height: 4rem;
+}
+#timestamp {
+	font-weight: bold;
+	color: #666;
+	margin-bottom: 0.5rem;
+}
+#summary {
+	color: #999;
+	margin-bottom: 1rem;
+}
 .suite-info {
 	padding: 1rem;
 	background-color: #eee;
@@ -25,19 +51,74 @@ body {padding: 1rem;font-size: 0.85rem;}
 	background-color: #D8000C;
 	color: #fff;
 }
-.suite-table {width: 100%;font-size: 0.85rem;margin-bottom: 1em;}
-.suite-table td {padding: 0.5rem;}
-.suite-table tr.passed {background-color: #DFF2BF;color: #4F8A10;}
-.suite-table tr.pending {background-color: #FEEFB3;color: #9F6000;}
-.suite-table tr.failed {background-color: #FFBABA;color: #D8000C;}
-.suite-table td {font-size: 0.85rem;border-bottom: 1px solid #aaa;vertical-align: top;}
-.suite-table td.suite {font-weight: bold;width: 20%;}
-.suite-table td.test {font-style: italic;width: 60%;}
-.suite-table td.test .failureMsg {font-weight: bold;font-size: 0.7rem;}
-.suite-table td.result {width: 20%;text-align: right;}
-</style></head><body><h1 id="title">Test report</h1></body><div id="metadata-container"><div id="timestamp">Start: 2018-03-24 10:12:40</div><div id="summary">
-		28 tests --
-		28 passed /
-		0 failed /
-		0 pending
-	</div></div><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/components/users-list/users-list.component.spec.ts</div><div class="suite-time">2.031s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">can load instance</td><td class="result">passed in 0.161s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should call usersApiService</td><td class="result">passed in 0.066s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should render mock users</td><td class="result">passed in 0.046s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should renders correctly</td><td class="result">passed in 0.053s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should input firtst user to user info</td><td class="result">passed in 0.043s</td></tr></table><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/components/calc/calc.component.spec.ts</div><div class="suite-time">0.483s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">CalcComponent</td><td class="test">can load instance</td><td class="result">passed in 0.097s</td></tr><tr class="passed"><td class="suite">CalcComponent</td><td class="test">calcOperators defaults to: CalcOperators</td><td class="result">passed in 0.053s</td></tr><tr class="passed"><td class="suite">CalcComponent</td><td class="test">should initForm</td><td class="result">passed in 0.033s</td></tr><tr class="passed"><td class="suite">CalcComponent</td><td class="test">should call calculate on submit</td><td class="result">passed in 0.038s</td></tr><tr class="passed"><td class="suite">CalcComponent</td><td class="test">should call calcService on calculate</td><td class="result">passed in 0.03s</td></tr><tr class="passed"><td class="suite">CalcComponent</td><td class="test">should update result</td><td class="result">passed in 0.038s</td></tr><tr class="passed"><td class="suite">CalcComponent</td><td class="test">should render result</td><td class="result">passed in 0.028s</td></tr></table><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/app.component.spec.ts</div><div class="suite-time">0.218s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">AppComponent</td><td class="test">can load instance</td><td class="result">passed in 0.056s</td></tr><tr class="passed"><td class="suite">AppComponent</td><td class="test">title defaults to: app</td><td class="result">passed in 0.029s</td></tr><tr class="passed"><td class="suite">AppComponent</td><td class="test">should render title</td><td class="result">passed in 0.023s</td></tr></table><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/components/user-details/user-details.component.spec.ts</div><div class="suite-time">0.2s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">UserDetailsComponent</td><td class="test">can load instance</td><td class="result">passed in 0.047s</td></tr><tr class="passed"><td class="suite">UserDetailsComponent</td><td class="test">should renders correctly</td><td class="result">passed in 0.038s</td></tr></table><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/services/users-api/users-api.service.spec.ts</div><div class="suite-time">0.169s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">UsersApiService</td><td class="test">should create an instance successfully</td><td class="result">passed in 0.026s</td></tr><tr class="passed"><td class="suite">UsersApiService</td><td class="test">should call the GET api and return the result</td><td class="result">passed in 0.021s</td></tr></table><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/services/forms/forms.service.spec.ts</div><div class="suite-time">0.116s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">FormsService</td><td class="test">expect form is invalid wiht out args</td><td class="result">passed in 0.004s</td></tr><tr class="passed"><td class="suite">FormsService</td><td class="test">expect form is invalid wiht out secondArg</td><td class="result">passed in 0.002s</td></tr><tr class="passed"><td class="suite">FormsService</td><td class="test">expect form is invalid wiht out firstArg</td><td class="result">passed in 0.001s</td></tr><tr class="passed"><td class="suite">FormsService</td><td class="test">expect form is valid wiht two args</td><td class="result">passed in 0s</td></tr></table><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/pipes/obj-to-arr.pipe.spec.ts</div><div class="suite-time">0.107s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">ObjToArrPipe</td><td class="test">should transforms X to Y</td><td class="result">passed in 0.003s</td></tr></table><div class="suite-info"><div class="suite-path">/home/kliment/Projects/ang-jest/src/app/services/calc/calc.service.spec.ts</div><div class="suite-time">0.1s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">CalcService</td><td class="test">should plus calculate</td><td class="result">passed in 0.002s</td></tr><tr class="passed"><td class="suite">CalcService</td><td class="test">should minus calculate</td><td class="result">passed in 0.001s</td></tr><tr class="passed"><td class="suite">CalcService</td><td class="test">should multiply calculate</td><td class="result">passed in 0s</td></tr><tr class="passed"><td class="suite">CalcService</td><td class="test">should divide calculate</td><td class="result">passed in 0.001s</td></tr></table></html>
+.suite-table {
+	width: 100%;
+	font-size: 0.85rem;
+	margin-bottom: 1em;
+}
+.suite-table td {
+	padding: 0.5rem;
+}
+.suite-table tr.passed {
+	background-color: #DFF2BF;
+	color: #4F8A10;
+}
+.suite-table tr.pending {
+	background-color: #FEEFB3;
+	color: #9F6000;
+}
+.suite-table tr.failed {
+	background-color: #FFBABA;
+	color: #D8000C;
+}
+.suite-table td {
+	font-size: 0.85rem;
+	border-bottom: 1px solid #aaa;
+	vertical-align: top;
+}
+.suite-table td.suite {
+	font-weight: bold;
+	width: 20%;
+}
+.suite-table td.test {
+	font-style: italic;
+	width: 60%;
+}
+.suite-table td.test .failureMsg {
+	font-size: 1rem;
+	white-space: pre-wrap;
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	word-wrap: break-word;
+}
+.suite-table td.result {
+	width: 20%;
+	text-align: right;
+}
+
+/* CONSOLE LOGS */
+.suite-consolelog {
+	margin-bottom: 2rem;
+	padding: 1rem;
+	background-color: #efefef;
+}
+.suite-consolelog-header {
+	font-weight: bold;
+}
+.suite-consolelog-item {
+	padding: 0.5rem;
+}
+.suite-consolelog-item pre {
+	margin: 0;
+}
+.suite-consolelog-item-origin {
+	color: #777;
+	font-weight: bold;
+}
+.suite-consolelog-item-message {
+	color: #000;
+	font-size: 1rem;
+	padding: 0 0.5rem;
+}
+</style></head><body><div id="jesthtml-content"><header><h1 id="title">Test report</h1></header><div id="metadata-container"><div id="timestamp">Start: 2019-06-13 14:45:26</div><div id="summary">7 tests -- 7 passed / 0 failed / 0 pending</div></div><div class="suite-info"><div class="suite-path">C:\tmp\angular-jest-example\src\app\components\user-details\user-details.component.spec.ts</div><div class="suite-time">2.726s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">UserDetailsComponent</td><td class="test">can load instance</td><td class="result">passed in 0.093s</td></tr><tr class="passed"><td class="suite">UserDetailsComponent</td><td class="test">should renders correctly</td><td class="result">passed in 0.029s</td></tr></table><div class="suite-info"><div class="suite-path">C:\tmp\angular-jest-example\src\app\components\users-list\users-list.component.spec.ts</div><div class="suite-time">2.839s</div></div><table class="suite-table" cellspacing="0" cellpadding="0"><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">can load instance</td><td class="result">passed in 0.102s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should call usersApiService</td><td class="result">passed in 0.03s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should render mock users</td><td class="result">passed in 0.036s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should renders correctly</td><td class="result">passed in 0.028s</td></tr><tr class="passed"><td class="suite">UsersListComponent</td><td class="test">should input firtst user to user info</td><td class="result">passed in 0.026s</td></tr></table></div></body></html>
